--- a/index.html
+++ b/index.html
@@ -470,20 +470,18 @@
 
                             <form onSubmit={handleLogin} className="space-y-6">
                                 <div>
-                                    <label className="block text-sm font-medium text-gray-700 mb-2">
-                                        Username
-                                    </label>
-                                    <input
-                                        type="text"
-                                        value={username}
-                                        onChange={(e) => setUsername(e.target.value)}
-                                        placeholder="Enter your username"
-                                        className="w-full p-4 border-2 border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent text-lg"
-                                        required
-                                        minLength="3"
-                                    />
-                                </div>
-
+    <label className="block text-sm font-medium text-gray-700 mb-2">
+        Email Address
+    </label>
+    <input
+        type="email"
+        value={username}
+        onChange={(e) => setUsername(e.target.value)}
+        placeholder="Enter your email address"
+        className="w-full p-4 border-2 border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent text-lg"
+        required
+    />
+</div>
                                 <div>
                                     <label className="block text-sm font-medium text-gray-700 mb-2">
                                         Password
