--- a/index.html
+++ b/index.html
@@ -1048,19 +1048,35 @@
                                 </div>
 
                                 <form onSubmit={handleManualSubmit} className="space-y-6">
-                                    <div>
-                                        <label className="block text-sm font-medium text-gray-700 mb-2">
-                                            Czech Word/Phrase
-                                        </label>
-                                        <input
-                                            type="text"
-                                            value={manualCzech}
-                                            onChange={(e) => setManualCzech(e.target.value)}
-                                            placeholder="Enter Czech word..."
-                                            className="w-full p-4 border-2 border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent text-lg"
-                                            required
-                                        />
-                                    </div>
+                                    {/* Czech Word Field */}
+<div>
+  <label className="block text-sm font-medium text-gray-700 mb-2">
+    Czech Word
+  </label>
+  <input
+    type="text"
+    value={manualCzech}
+    onChange={(e) => setManualCzech(e.target.value)}
+    placeholder="Enter Czech word..."
+    className="w-full p-4 border-2 border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent text-lg"
+    required
+  />
+</div>
+
+{/* English Word Field */}
+<div className="mt-4">
+  <label className="block text-sm font-medium text-gray-700 mb-2">
+    English Word
+  </label>
+  <input
+    type="text"
+    value={manualEnglish}
+    onChange={(e) => setManualEnglish(e.target.value)}
+    placeholder="Enter English word..."
+    className="w-full p-4 border-2 border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent text-lg"
+    required
+  />
+</div>
 
                                     <div className="flex gap-4">
                                         <button
@@ -1652,18 +1668,4 @@
         ReactDOM.render(<CzechFlashcardApp />, document.getElementById('root'));
     </script>
 </body>
-</html>-2 border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent text-lg"
-                                            required
-                                        />
-                                    </div>
-
-                                    <div>
-                                        <label className="block text-sm font-medium text-gray-700 mb-2">
-                                            English Translation
-                                        </label>
-                                        <input
-                                            type="text"
-                                            value={manualEnglish}
-                                            onChange={(e) => setManualEnglish(e.target.value)}
-                                            placeholder="Enter English translation..."
-                                            className="w-full p-4 border
+</html>
