--- a/index.html
+++ b/index.html
@@ -552,8 +552,8 @@
                     
                     img.onload = () => {
                         // Set canvas size
-                        canvas.width = img.width;
-                        canvas.height = img.height;
+                        canvas.width = img.naturalWidth;
+canvas.height = img.naturalHeight;
                         
                         // Draw image
                         ctx.drawImage(img, 0, 0);
