--- a/index.html
+++ b/index.html
@@ -285,30 +285,88 @@
             };
 
             const startStudySession = () => {
-                shuffleCards();
-                setCurrentCardIndex(0);
-                setShowAnswer(false);
-                setCorrectCount(0);
-                setIncorrectCount(0);
-                setCurrentScreen('study');
-            };
+    const today = new Date().toISOString().split('T')[0]; // Today in YYYY-MM-DD
+
+    const dueCards = allVocabulary.filter(card => {
+        const dueDate = card.nextReviewDate ? card.nextReviewDate.split('T')[0] : today;
+        return dueDate <= today;
+    });
+
+    if (dueCards.length === 0) {
+        alert("No cards due today! ✅ Enjoy your free time!");
+        return;
+    }
+
+    const shuffled = [...dueCards].sort(() => Math.random() - 0.5);
+    setStudyCards(shuffled);
+    setCurrentCardIndex(0);
+    setShowAnswer(false);
+    setCorrectCount(0);
+    setIncorrectCount(0);
+    setCurrentScreen('study');
+};
 
             const handleAnswer = (isCorrect) => {
-                if (isCorrect) {
-                    setCorrectCount(prev => prev + 1);
-                } else {
-                    setIncorrectCount(prev => prev + 1);
-                }
+    const today = new Date();
+    const updatedStudyCards = [...studyCards];
+    const currentCard = updatedStudyCards[currentCardIndex];
 
-                setTimeout(() => {
-                    if (currentCardIndex < studyCards.length - 1) {
-                        setCurrentCardIndex(prev => prev + 1);
-                        setShowAnswer(false);
-                    } else {
-                        setCurrentScreen('results');
-                    }
-                }, 500);
-            };
+    if (isCorrect) {
+        setCorrectCount(prev => prev + 1);
+
+        // Increase correct streak
+        currentCard.correctInARow = (currentCard.correctInARow || 0) + 1;
+
+        // Calculate next review date
+        let daysUntilNext;
+        if (currentCard.correctInARow === 1) {
+            daysUntilNext = 1; // 1 day later
+        } else if (currentCard.correctInARow === 2) {
+            daysUntilNext = 3; // 3 days later
+        } else if (currentCard.correctInARow === 3) {
+            daysUntilNext = 7; // 1 week
+        } else {
+            daysUntilNext = 15; // 2+ weeks for well-known cards
+        }
+
+        const nextReviewDate = new Date();
+        nextReviewDate.setDate(today.getDate() + daysUntilNext);
+        currentCard.nextReviewDate = nextReviewDate.toISOString();
+    } else {
+        setIncorrectCount(prev => prev + 1);
+
+        // Reset correct streak
+        currentCard.correctInARow = 0;
+
+        // Schedule next review for tomorrow
+        const nextReviewDate = new Date();
+        nextReviewDate.setDate(today.getDate() + 1);
+        currentCard.nextReviewDate = nextReviewDate.toISOString();
+    }
+
+    // Update studyCards list
+    updatedStudyCards[currentCardIndex] = currentCard;
+    setStudyCards(updatedStudyCards);
+
+    // Update full vocabulary
+    const updatedVocabulary = allVocabulary.map(card => {
+        if (card.czech === currentCard.czech && card.english === currentCard.english) {
+            return currentCard;
+        }
+        return card;
+    });
+    setAllVocabulary(updatedVocabulary);
+
+    // Move to next card
+    setTimeout(() => {
+        if (currentCardIndex < updatedStudyCards.length - 1) {
+            setCurrentCardIndex(prev => prev + 1);
+            setShowAnswer(false);
+        } else {
+            setCurrentScreen('results');
+        }
+    }, 500);
+};
 
             const addManualCard = (czech, english) => {
                 if (!czech.trim() || !english.trim()) {
@@ -316,7 +374,12 @@
                     return;
                 }
                 
-                const newCard = { czech: czech.trim(), english: english.trim() };
+                const newCard = {
+    czech: czech.trim(),
+    english: english.trim(),
+    correctInARow: 0,
+    nextReviewDate: new Date().toISOString() // Set next review to today
+};
                 const updatedVocabulary = [...allVocabulary, newCard];
                 setAllVocabulary(updatedVocabulary);
                 setManualCzech('');
