--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" content="#3B82F6">
 </head>
 <body>
-    <div id="root"></div
+    <div id="root"></div>
 
     <script type="text/babel">
         const { useState, useEffect, useRef } = React;
