--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
 
                 const timer = setTimeout(checkSession, 500);
 
-                const { data: { subscription } } = supabaseClient.auth.onAuthStateChange(
+                const { data: subscription } = supabaseClient.auth.onAuthStateChange(
                     async (event, session) => {
                         console.log('Auth state change:', event, session?.user?.email);
                         
@@ -662,7 +662,7 @@
 
                 return () => {
                     clearTimeout(timer);
-                    subscription.unsubscribe();
+                    subscription?.unsubscribe();
                 };
             }, []);
 
