--- a/index.html
+++ b/index.html
@@ -1219,22 +1219,24 @@
     }
 
     return (
-        <div className="min-h-screen bg-gradient-to-br from-green-600 to-blue-700 p-4 flex items-center justify-center">
-            <div className="bg-white p-8 rounded-2xl shadow-2xl text-center max-w-md w-full">
-                <div className="text-4xl font-bold text-red-600 mb-6">
-                    {typingRecallMode === 'czech-to-english' 
-                        ? currentTypingCard.czech 
-                        : currentTypingCard.english}
-                </div>
+    <div className="min-h-screen bg-gradient-to-br from-green-600 to-blue-700 p-4 flex items-center justify-center">
+        <div className="bg-white p-8 rounded-2xl shadow-2xl text-center max-w-md w-full">
+            <div className="text-4xl font-bold text-red-600 mb-6">
+                {typingRecallMode === 'czech-to-english' 
+                    ? currentTypingCard.czech 
+                    : currentTypingCard.english}
+            </div>
 
-                <input
-                    type="text"
-                    value={userInput}
-                    onChange={(e) => setUserInput(e.target.value)}
-                    placeholder="Type your answer"
-                    className="w-full p-4 mb-4 border-2 border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 text-lg"
-                />
+            <input
+                type="text"
+                value={userInput}
+                onChange={(e) => setUserInput(e.target.value)}
+                placeholder="Type your answer"
+                className="w-full p-4 mb-4 border-2 border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 text-lg"
+            />
 
+            {/* 🔥 FIX: Wrap these two blocks */}
+            <>
                 {!showFeedback && (
                     <button
                         onClick={() => {
@@ -1275,9 +1277,11 @@
                         </button>
                     </div>
                 )}
-            </div>
+            </>
         </div>
-    );
+    </div>
+);
+
 }
 
 
