--- a/index.html
+++ b/index.html
@@ -1204,6 +1204,35 @@ if (currentScreen === 'home') {
                     </div>
                 );
             }
+if (currentScreen === 'activeRecallMenu') {
+  return (
+    <div className="min-h-screen bg-gradient-to-br from-green-600 to-blue-700 p-4 flex items-center justify-center">
+      <div className="bg-white p-8 rounded-2xl shadow-2xl text-center max-w-md w-full">
+        <h2 className="text-3xl font-bold mb-6">🧠 Active Recall</h2>
+        <div className="space-y-4">
+          <button
+            onClick={() => startTypingRecallGame('czech-to-english')}
+            className="w-full bg-purple-600 text-white py-4 px-6 rounded-xl font-semibold text-lg hover:bg-purple-700 transition-colors"
+          >
+            Type English Word
+          </button>
+          <button
+            onClick={() => startTypingRecallGame('english-to-czech')}
+            className="w-full bg-indigo-600 text-white py-4 px-6 rounded-xl font-semibold text-lg hover:bg-indigo-700 transition-colors"
+          >
+            Type Czech Word
+          </button>
+          <button
+            onClick={() => setCurrentScreen('home')}
+            className="w-full bg-gray-200 text-gray-700 py-3 px-6 rounded-xl font-semibold hover:bg-gray-300 transition-colors mt-4"
+          >
+            ← Back to Home
+          </button>
+        </div>
+      </div>
+    </div>
+  );
+}
 
             if (currentScreen === 'typingRecall') {
     const currentTypingCard = typingGameCards[typingCurrentIndex];
