--- a/index.html
+++ b/index.html
@@ -1254,7 +1254,17 @@ if (currentScreen === 'activeRecallMenu') {
     }
 
     return (
-    <div className="min-h-screen bg-gradient-to-br from-green-600 to-blue-700 p-4 flex items-center justify-center">
+    <div className="min-h-screen bg-gradient-to-br from-green-600 to-blue-700 p-4 flex flex-col items-center justify-center">
+        {/* Back to Home Button */}
+        <div className="w-full flex justify-start mb-4">
+            <button
+                onClick={() => setCurrentScreen('home')}
+                className="text-white bg-black bg-opacity-30 px-4 py-2 rounded-full hover:bg-opacity-50 transition"
+            >
+                ← Home
+            </button>
+        </div>
+
         <div className="bg-white p-8 rounded-2xl shadow-2xl text-center max-w-md w-full">
             <div className="text-4xl font-bold text-red-600 mb-6">
                 {typingRecallMode === 'czech-to-english' 
