--- a/index.html
+++ b/index.html
@@ -1079,62 +1079,96 @@ if (currentScreen === 'home') {
                     </div>
 
                     {allVocabulary.length === 0 ? (
-                        <div className="mb-6 p-4 bg-yellow-50 border border-yellow-200 rounded-lg">
-                            <div className="text-yellow-800 font-semibold mb-2">🚀 Get Started!</div>
-                            <div className="text-sm text-yellow-700">
-                                Your vocabulary is empty. Add your first cards using the buttons below!
-                            </div>
-                        </div>
-                    ) : dueCards > 0 ? (
-                        <>
-                            <button
-                                onClick={startStudySession}
-                                className="w-full bg-blue-600 text-white py-4 px-6 rounded-xl font-semibold text-lg hover:bg-blue-700 transition-colors mb-4"
-                            >
-                                Study AnkiDroid ({dueCards} cards)
-                            </button>
+    <div className="mb-6 p-4 bg-yellow-50 border border-yellow-200 rounded-lg">
+        <div className="text-yellow-800 font-semibold mb-2">🚀 Get Started!</div>
+        <div className="text-sm text-yellow-700">
+            Your vocabulary is empty. Add your first cards using the buttons below!
+        </div>
+    </div>
+) : dueCards > 0 ? (
+    <div className="space-y-4 mb-6">
+        {/* Study Block */}
+        <div 
+            onClick={startStudySession}
+            className="bg-gradient-to-r from-blue-500 to-purple-600 rounded-2xl p-6 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
+        >
+            <div className="flex items-center justify-between">
+                <div>
+                    <div className="text-2xl font-bold mb-1">Study Session</div>
+                    <div className="text-sm opacity-90">{dueCards} cards due • Spaced repetition</div>
+                </div>
+                <div className="text-4xl">🧠</div>
+            </div>
+        </div>
 
-                            <div className="mb-4">
-  <button
-    onClick={() => setCurrentScreen('activeRecallMenu')}
-    className="w-full bg-purple-600 text-white py-4 px-6 rounded-xl font-semibold text-lg hover:bg-purple-700 transition-colors"
-  >
-    Active Recall
-  </button>
+        {/* Active Recall Block */}
+        <div 
+            onClick={() => setCurrentScreen('activeRecallMenu')}
+            className="bg-gradient-to-r from-purple-500 to-pink-500 rounded-2xl p-6 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
+        >
+            <div className="flex items-center justify-between">
+                <div>
+                    <div className="text-2xl font-bold mb-1">Active Recall</div>
+                    <div className="text-sm opacity-90">Smart practice • Performance tracking</div>
+                </div>
+                <div className="text-4xl">⚡</div>
+            </div>
+        </div>
+    </div>
+) : (
+    <div className="mb-6 p-4 bg-green-50 border border-green-200 rounded-lg">
+        <div className="text-green-800 font-semibold mb-2">🎉 All caught up!</div>
+        <div className="text-sm text-green-700">
+            No cards are due for review right now. Come back later or add more cards!
+        </div>
+    </div>
+)}
+
+<div className="space-y-4">
+    {/* Browse Block */}
+    {allVocabulary.length > 0 && (
+        <div 
+            onClick={() => setCurrentScreen('browse')}
+            className="bg-white border-2 border-gray-200 rounded-2xl p-6 cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
+        >
+            <div className="flex items-center justify-between">
+                <div>
+                    <div className="text-2xl font-bold text-gray-800 mb-1">Browse Cards</div>
+                    <div className="text-sm text-gray-600">View all {allVocabulary.length} cards • Progress tracking</div>
+                </div>
+                <div className="text-4xl">📚</div>
+            </div>
+        </div>
+    )}
+
+    {/* Add Cards Block */}
+    <div 
+        onClick={() => setCurrentScreen('manualAdd')}
+        className="bg-gradient-to-r from-green-500 to-teal-500 rounded-2xl p-6 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
+    >
+        <div className="flex items-center justify-between">
+            <div>
+                <div className="text-2xl font-bold mb-1">Add Cards</div>
+                <div className="text-sm opacity-90">Create new vocabulary cards</div>
+            </div>
+            <div className="text-4xl">➕</div>
+        </div>
+    </div>
+
+    {/* Upload CSV Block */}
+    <div 
+        onClick={() => csvInputRef.current?.click()}
+        className="bg-gradient-to-r from-orange-500 to-red-500 rounded-2xl p-6 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
+    >
+        <div className="flex items-center justify-between">
+            <div>
+                <div className="text-2xl font-bold mb-1">Import CSV</div>
+                <div className="text-sm opacity-90">Bulk upload vocabulary cards</div>
+            </div>
+            <div className="text-4xl">📄</div>
+        </div>
+    </div>
 </div>
-
-                        </>
-                    ) : (
-                        <div className="mb-6 p-4 bg-green-50 border border-green-200 rounded-lg">
-                            <div className="text-green-800 font-semibold mb-2">🎉 All caught up!</div>
-                            <div className="text-sm text-green-700">
-                                No cards are due for review right now. Come back later or add more cards!
-                            </div>
-                        </div>
-                    )}
-
-                    {allVocabulary.length > 0 && (
-                        <button
-                            onClick={() => setCurrentScreen('browse')}
-                            className="w-full bg-gray-200 text-gray-700 py-4 px-6 rounded-xl font-semibold text-lg hover:bg-gray-300 transition-colors mb-4"
-                        >
-                            Browse All Cards ({allVocabulary.length})
-                        </button>
-                    )}
-
-                    <button
-                        onClick={() => setCurrentScreen('manualAdd')}
-                        className="w-full bg-green-600 text-white py-4 px-6 rounded-xl font-semibold text-lg hover:bg-green-700 transition-colors mb-4"
-                    >
-                        Add Card Manually
-                    </button>
-
-                    <button
-                        onClick={() => csvInputRef.current?.click()}
-                        className="w-full bg-orange-600 text-white py-4 px-6 rounded-xl font-semibold text-lg hover:bg-orange-700 transition-colors"
-                    >
-                        Upload CSV File
-                    </button>
 
                     <input
                         ref={csvInputRef}
