--- a/index.html
+++ b/index.html
@@ -1078,7 +1078,7 @@ if (currentScreen === 'home') {
                         </div>
                     </div>
 
-                    {allVocabulary.length === 0 ? (
+{allVocabulary.length === 0 ? (
     <div className="mb-6 p-4 bg-yellow-50 border border-yellow-200 rounded-lg">
         <div className="text-yellow-800 font-semibold mb-2">🚀 Get Started!</div>
         <div className="text-sm text-yellow-700">
@@ -1086,89 +1086,113 @@ if (currentScreen === 'home') {
         </div>
     </div>
 ) : dueCards > 0 ? (
-    <div className="space-y-4 mb-6">
-        {/* Study Block */}
-        <div 
-            onClick={startStudySession}
-            className="bg-gradient-to-r from-blue-500 to-purple-600 rounded-2xl p-6 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
-        >
-            <div className="flex items-center justify-between">
-                <div>
-                    <div className="text-2xl font-bold mb-1">Study Session</div>
-                    <div className="text-sm opacity-90">{dueCards} cards due • Spaced repetition</div>
+    <div className="mb-6">
+        <div className="grid grid-cols-2 gap-4 mb-4">
+            {/* Study Block */}
+            <div 
+                onClick={startStudySession}
+                className="bg-gradient-to-br from-blue-500 to-purple-600 rounded-xl p-4 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
+            >
+                <div className="text-3xl mb-2">🧠</div>
+                <div className="font-bold text-lg mb-1">Study</div>
+                <div className="text-xs opacity-80">{dueCards} cards due</div>
+            </div>
+
+            {/* Active Recall Block */}
+            <div 
+                onClick={() => setCurrentScreen('activeRecallMenu')}
+                className="bg-gradient-to-br from-purple-500 to-pink-500 rounded-xl p-4 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
+            >
+                <div className="text-3xl mb-2">⚡</div>
+                <div className="font-bold text-lg mb-1">Active Recall</div>
+                <div className="text-xs opacity-80">Smart practice</div>
+            </div>
+
+            {/* Browse Block */}
+            {allVocabulary.length > 0 && (
+                <div 
+                    onClick={() => setCurrentScreen('browse')}
+                    className="bg-gradient-to-br from-cyan-400 to-blue-500 rounded-xl p-4 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
+                >
+                    <div className="text-3xl mb-2">📚</div>
+                    <div className="font-bold text-lg mb-1">Browse</div>
+                    <div className="text-xs opacity-80">{allVocabulary.length} cards</div>
                 </div>
-                <div className="text-4xl">🧠</div>
+            )}
+
+            {/* Add Cards Block */}
+            <div 
+                onClick={() => setCurrentScreen('manualAdd')}
+                className="bg-gradient-to-br from-green-500 to-teal-500 rounded-xl p-4 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
+            >
+                <div className="text-3xl mb-2">➕</div>
+                <div className="font-bold text-lg mb-1">Add Cards</div>
+                <div className="text-xs opacity-80">Manual entry</div>
             </div>
         </div>
 
-        {/* Active Recall Block */}
+        {/* CSV Upload - Full width below the grid */}
         <div 
-            onClick={() => setCurrentScreen('activeRecallMenu')}
-            className="bg-gradient-to-r from-purple-500 to-pink-500 rounded-2xl p-6 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
+            onClick={() => csvInputRef.current?.click()}
+            className="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl p-4 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
         >
             <div className="flex items-center justify-between">
                 <div>
-                    <div className="text-2xl font-bold mb-1">Active Recall</div>
-                    <div className="text-sm opacity-90">Smart practice • Performance tracking</div>
+                    <div className="font-bold text-lg mb-1">Import CSV File</div>
+                    <div className="text-sm opacity-90">Bulk upload vocabulary cards</div>
                 </div>
-                <div className="text-4xl">⚡</div>
+                <div className="text-3xl">📄</div>
             </div>
         </div>
     </div>
 ) : (
-    <div className="mb-6 p-4 bg-green-50 border border-green-200 rounded-lg">
-        <div className="text-green-800 font-semibold mb-2">🎉 All caught up!</div>
-        <div className="text-sm text-green-700">
-            No cards are due for review right now. Come back later or add more cards!
+    <div className="mb-6">
+        <div className="mb-4 p-4 bg-green-50 border border-green-200 rounded-lg">
+            <div className="text-green-800 font-semibold mb-2">🎉 All caught up!</div>
+            <div className="text-sm text-green-700">
+                No cards are due for review right now. Come back later or add more cards!
+            </div>
         </div>
-    </div>
-)}
 
-<div className="space-y-4">
-    {/* Browse Block */}
-    {allVocabulary.length > 0 && (
+        <div className="grid grid-cols-2 gap-4 mb-4">
+            {/* Browse Block */}
+            {allVocabulary.length > 0 && (
+                <div 
+                    onClick={() => setCurrentScreen('browse')}
+                    className="bg-gradient-to-br from-cyan-400 to-blue-500 rounded-xl p-4 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
+                >
+                    <div className="text-3xl mb-2">📚</div>
+                    <div className="font-bold text-lg mb-1">Browse</div>
+                    <div className="text-xs opacity-80">{allVocabulary.length} cards</div>
+                </div>
+            )}
+
+            {/* Add Cards Block */}
+            <div 
+                onClick={() => setCurrentScreen('manualAdd')}
+                className="bg-gradient-to-br from-green-500 to-teal-500 rounded-xl p-4 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
+            >
+                <div className="text-3xl mb-2">➕</div>
+                <div className="font-bold text-lg mb-1">Add Cards</div>
+                <div className="text-xs opacity-80">Manual entry</div>
+            </div>
+        </div>
+
+        {/* CSV Upload - Full width below the grid */}
         <div 
-            onClick={() => setCurrentScreen('browse')}
-            className="bg-white border-2 border-gray-200 rounded-2xl p-6 cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
+            onClick={() => csvInputRef.current?.click()}
+            className="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl p-4 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
         >
             <div className="flex items-center justify-between">
                 <div>
-                    <div className="text-2xl font-bold text-gray-800 mb-1">Browse Cards</div>
-                    <div className="text-sm text-gray-600">View all {allVocabulary.length} cards • Progress tracking</div>
+                    <div className="font-bold text-lg mb-1">Import CSV File</div>
+                    <div className="text-sm opacity-90">Bulk upload vocabulary cards</div>
                 </div>
-                <div className="text-4xl">📚</div>
+                <div className="text-3xl">📄</div>
             </div>
-        </div>
-    )}
-
-    {/* Add Cards Block */}
-    <div 
-        onClick={() => setCurrentScreen('manualAdd')}
-        className="bg-gradient-to-r from-green-500 to-teal-500 rounded-2xl p-6 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
-    >
-        <div className="flex items-center justify-between">
-            <div>
-                <div className="text-2xl font-bold mb-1">Add Cards</div>
-                <div className="text-sm opacity-90">Create new vocabulary cards</div>
-            </div>
-            <div className="text-4xl">➕</div>
         </div>
     </div>
-
-    {/* Upload CSV Block */}
-    <div 
-        onClick={() => csvInputRef.current?.click()}
-        className="bg-gradient-to-r from-orange-500 to-red-500 rounded-2xl p-6 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl"
-    >
-        <div className="flex items-center justify-between">
-            <div>
-                <div className="text-2xl font-bold mb-1">Import CSV</div>
-                <div className="text-sm opacity-90">Bulk upload vocabulary cards</div>
-            </div>
-            <div className="text-4xl">📄</div>
-        </div>
-    </div>
-</div>
+)}
 
                     <input
                         ref={csvInputRef}
