--- a/index.html
+++ b/index.html
@@ -1079,13 +1079,30 @@ if (currentScreen === 'home') {
                     </div>
 
 {allVocabulary.length === 0 ? (
-    <div className="mb-6 p-4 bg-yellow-50 border border-yellow-200 rounded-lg">
-        <div className="text-yellow-800 font-semibold mb-2">🚀 Get Started!</div>
-        <div className="text-sm text-yellow-700">
-            Your vocabulary is empty. Add your first cards using the buttons below!
+    <div className="mb-6">
+        <div className="mb-4 p-4 bg-yellow-50 border border-yellow-200 rounded-lg">
+            <div className="text-yellow-800 font-semibold mb-2">🚀 Get Started!</div>
+            <div className="text-sm text-yellow-700">
+                Your vocabulary is empty. Add your first cards using the button below!
+            </div>
+        </div>
+
+        {/* Add Cards Block - Always visible when empty */}
+        <div 
+            onClick={() => setCurrentScreen('addCardsMenu')}
+            className="bg-gradient-to-br from-green-500 to-teal-500 rounded-xl p-6 text-white cursor-pointer transform transition-all duration-300 hover:-translate-y-1 hover:shadow-xl mb-4"
+        >
+            <div className="flex items-center justify-between">
+                <div>
+                    <div className="text-2xl font-bold mb-1">Add Your First Cards</div>
+                    <div className="text-sm opacity-90">Manual entry or CSV import</div>
+                </div>
+                <div className="text-4xl">➕</div>
+            </div>
         </div>
     </div>
 ) : dueCards > 0 ? (
+    // ... rest of the existing grid code
     <div className="mb-6">
         <div className="grid grid-cols-2 gap-4 mb-4">
             {/* Study Block */}
