--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
             });
             const [difficultWords, setDifficultWords] = useState(new Set());
             const [sessionWrongCards, setSessionWrongCards] = useState([]);
+            const [feedbackText, setFeedbackText] = useState('');
+            const [feedbackType, setFeedbackType] = useState('');
+
 
 
             // Spaced Repetition Algorithm - Based on Anki's SM-2 algorithm
@@ -1960,6 +1963,74 @@ if (currentScreen === 'addCardsMenu') {
                     </div>
                 );
             }
+if (currentScreen === 'feedback') {
+    return (
+        <div className="min-h-screen bg-gradient-to-br from-blue-600 to-green-700 p-4 flex items-center justify-center">
+            <div className="bg-white p-8 rounded-2xl shadow-2xl text-center max-w-md w-full">
+                <div className="flex items-center mb-6">
+                    <button
+                        onClick={() => setCurrentScreen('home')}
+                        className="mr-4 p-2 text-gray-600 hover:bg-gray-100 rounded-full"
+                    >
+                        ← Back
+                    </button>
+                    <h2 className="text-2xl font-bold text-gray-800">Give Feedback</h2>
+                </div>
+
+                <form onSubmit={(e) => { e.preventDefault(); submitFeedback(); }} className="space-y-6">
+                    <div>
+                        <label className="block text-sm font-medium text-gray-700 mb-2">
+                            Your Feedback
+                        </label>
+                        <textarea
+                            value={feedbackText}
+                            onChange={(e) => setFeedbackText(e.target.value)}
+                            placeholder="Tell us about your experience..."
+                            className="w-full p-4 border-2 border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent text-lg"
+                            rows="4"
+                            maxLength="500"
+                            required
+                        ></textarea>
+                    </div>
+
+                    <div>
+                        <label className="block text-sm font-medium text-gray-700 mb-2">
+                            Feedback Type
+                        </label>
+                        <select
+                            value={feedbackType}
+                            onChange={(e) => setFeedbackType(e.target.value)}
+                            className="w-full p-4 border-2 border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent text-lg"
+                            required
+                        >
+                            <option value="">Select type...</option>
+                            <option value="Bug">🐞 Bug</option>
+                            <option value="Suggestion">💡 Suggestion</option>
+                            <option value="Praise">🎉 Praise</option>
+                            <option value="Other">❓ Other</option>
+                        </select>
+                    </div>
+
+                    <div className="flex gap-4">
+                        <button
+                            type="submit"
+                            className="flex-1 bg-green-600 text-white py-3 px-6 rounded-xl font-semibold hover:bg-green-700 transition-colors"
+                        >
+                            Submit
+                        </button>
+                        <button
+                            type="button"
+                            onClick={() => setCurrentScreen('home')}
+                            className="flex-1 bg-gray-200 text-gray-700 py-3 px-6 rounded-xl font-semibold hover:bg-gray-300 transition-colors"
+                        >
+                            Cancel
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    );
+}
 
             return null;
         };
