--- a/index.html
+++ b/index.html
@@ -2048,10 +2048,10 @@ if (currentScreen === 'feedback') {
                             required
                         >
                             <option value="">Select type...</option>
-                            <option value="Bug">🐞 Bug</option>
-<option value="Suggestion">💡 Suggestion</option>
-<option value="Praise">🎉 Praise</option>
-<option value="Other">❓ Other</option>
+                            <option value="bug">🐞 Bug</option>
+<option value="suggestion">💡 Suggestion</option>
+<option value="praise">🎉 Praise</option>
+<option value="other">❓ Other</option>
 
                         </select>
                     </div>
