--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@ const checkTypingAnswer = () => {
 
                 const timer = setTimeout(checkSession, 500);
 
-                const { data: subscription } = supabaseClient.auth.onAuthStateChange(
+                const { data: { subscription } } = supabaseClient.auth.onAuthStateChange(
                     async (event, session) => {
                         console.log('Auth state change:', event, session?.user?.email);
                         
@@ -979,7 +979,9 @@ const checkTypingAnswer = () => {
 
                 return () => {
                     clearTimeout(timer);
-                    subscription?.unsubscribe();
+                    if (subscription) {
+    subscription.unsubscribe();
+}
                 };
             }, []);
 
@@ -1176,6 +1178,7 @@ const getDueCardsCount = () => {
 
             // Home Screen
 if (currentScreen === 'home') {
+    const dueCards = getDueCardsCount(); // ADD THIS LINE
     const learningCount = allVocabulary.filter(card => 
     card.state === CARD_STATES.LEARNING && 
     card.nextReviewDate && 
